--- a/starboard_configs.json
+++ b/starboard_configs.json
@@ -1,1 +1,2 @@
-{"1294764094343086150": {"channel_id":1300463419719159882, "emoji": "🦐", "threshold": 2}
+{'1143283884637814816': {'channel_id': 1290745202813960203, 'emoji': '<:raywheeze:1143285896725135370>', 'threshold': 3},
+'1294764094343086150': {'channel_id': 1300463419719159882, 'emoji': '🦐', 'threshold': 2}}
