--- a/starboard_configs.json
+++ b/starboard_configs.json
@@ -9,4 +9,9 @@
         "emoji": "🦐",
         "threshold": 2
     }
+    "1140421288989577226": {
+        "channel_id": 1303979749650989118,
+        "emoji": "⭐",
+        "threshold": 3
+    }
 }
